--- a/src/UsersComponents/usersStyles.css
+++ b/src/UsersComponents/usersStyles.css
@@ -96,3 +96,89 @@
     cursor: pointer;
 }
 .newUser img{cursor: pointer;}
+
+@media only screen and (max-width:768px ) {
+  .usersContainer {
+    position: relative;
+    margin: 0;
+    width: 80%;
+    top: 5%;
+    height: 90%;
+  }
+  .tileContainer {
+    height: 20%;
+  }
+  .tileContainer img {
+    width: 90%;
+  }
+ 
+  .tileContainer-text h2{
+    font-size: 6vw;
+    justify-self: flex-end;
+
+  }
+  .tileContainer-text p{
+    font-size: 3vw;
+  }
+
+.buttonSelect{
+   width: 90%;
+    height: 50%;
+    font-size: 2vw;
+}  
+.buttonAdd{
+  height: 5%;
+  font-size: 3vw;
+}
+.newUser input{
+ font-size: 4vw;
+}
+.newUser button{
+ 
+  height: 40%;
+  width: 90%;
+}
+}
+@media only screen and (max-width:1024px ) and (min-width:769px ) {
+  .usersContainer {
+    position: relative;
+    margin: 0;
+    width: 80%;
+    top: 5%;
+    height: 90%;
+  }
+  .tileContainer {
+    height: 15%;
+  }
+  .tileContainer img {
+    width: 40%;
+    margin: auto;
+  }
+ 
+  .tileContainer-text h2{
+    font-size: 4vw;
+    justify-self: flex-end;
+
+  }
+  .tileContainer-text p{
+    font-size: 2vw;
+  }
+
+.buttonSelect{
+   width: 90%;
+    height: 50%;
+    font-size: 2vw;
+}  
+.buttonAdd{
+  height: 5%;
+  font-size: 3vw;
+}
+.newUser input{
+ font-size: 4vw;
+}
+.newUser button{
+ 
+  height: 40%;
+  width: 90%;
+}
+}
