--- a/src/styles.css
+++ b/src/styles.css
@@ -20,4 +20,13 @@ body {
   grid-template-columns: 1fr 2fr;
   
 }
-
+@media only screen and (max-width: 1024px) {
+  .mainContainer {
+    height: 90vh;
+    width: 90vw;
+    margin: 5vh auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
