--- a/src/ActionsComponents/actionsStyles.css
+++ b/src/ActionsComponents/actionsStyles.css
@@ -89,6 +89,7 @@
     
       .actionsContainer {
         position: absolute;
+
         
     }
     .hidden{
@@ -118,6 +119,7 @@
     
       .actionsContainer {
         position: absolute;
+        height: 90%;
         
     }
     .hidden{
@@ -137,6 +139,40 @@
      .inputGrid_select{
       width: 80%;
       font-size: 2.5vw;
+     }
+   
+     .actionsContainer_split{
+      font-size: 3vw;
+     }
+    }
+    @media (orientation: landscape) and (max-width:1024px )  {
+        
+      .actionsContainer {
+        position: absolute;
+        width: 100vw;
+        
+    }
+    .hidden{
+      visibility: hidden;
+    }
+    .actionsContainer h1{
+      font-size: 5vw;
+   }
+    .inputGrid{ 
+     font-size: 2.5vw;
+     width: 80%;
+     height: auto;
+    }
+    .inputGrid span, .inputGrid input, .inputGrid_select select{
+      font-size: 3vw;
+      align-self: center;
+    
+    }
+    
+     .inputGrid_select{
+      width: 80%;
+      font-size: 2vw;
+      
      }
    
      .actionsContainer_split{
